# pydantic-zarr

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  mkdocs.yaml  pyproject.toml  test.py
.github/: dependabot.yml
.github/workflows/: cd.yml  check_changelogs.yml  ci.yml  docs.yml  pre-commit.yml  test.yml
changes/: +loose-spec-type-changes.removal.md  +numpy-2.5-timedelta-warning.misc.md  +per-element-strict-validation.feature.md  +remove-hand-rolled-types.removal.md  +zarr-metadata-migration.doc.md  +zarr-metadata-strict.feature.md  .gitignore  112.feature.md  115.bugfix.md  120.feature.md  121.misc.md  123.doc.md  125.bugfix.md  128.doc.md  141.feature.md  145.feature.md  166.feature.md  167.bugfix.md  168.doc.md  169.bugfix.md  170.bugfix.md  171.bugfix.md  173.bugfix.md  173.doc.md  173.feature.1.md  173.feature.2.md  173.feature.3.md  173.feature.4.md  173.feature.5.md  173.removal.1.md  173.removal.md  README.md
docs/: index.md  migration.md  release-notes.md  usage_zarr_v2.md  usage_zarr_v3.md
docs/api/: v3.md
docs/api/experimental/: core.md  v2.md  v3.md
docs/api/v3/: codecs.md
docs/experimental/: index.md  usage.md  usage_zarr_v2.md  usage_zarr_v3.md
docs/superpowers/plans/: 2026-06-19-zarr-metadata-integration.md
docs/superpowers/specs/: 2026-06-19-zarr-metadata-integration-design.md
src/pydantic_zarr/: _strict_fill.py  _strict_v3.py  base.py  core.py  io_proxy.py  v2.py  v3.py  zarrio.py
src/pydantic_zarr/backends/: _tensorstore.py
src/pydantic_zarr/backends/_tensorstore/: __init__.py  models.py
src/pydantic_zarr/backends/zarr_python/: __init__.py  v2.py
src/pydantic_zarr/engine/: __init__.py
src/pydantic_zarr/engine/_tensorstore/: __init__.py  _import.py  models.py  v2.py  zarrify.py
src/pydantic_zarr/engine/numpy_like/: zarrify.py
src/pydantic_zarr/engine/zarr_python/: _import.py  zarrify.py
src/pydantic_zarr/engine/zarr_python/zarr_v2/: __init__.py  _io.py
src/pydantic_zarr/experimental/: README.md  __init__.py  core.py  v2.py  v3.py
src/pydantic_zarr/strict/v3/: _cross_field.py  _pipeline.py  _registry.py
src/pydantic_zarr/strict/v3/chunk_grid/: __init__.py  _spec.py  rectilinear.py  regular.py
src/pydantic_zarr/strict/v3/chunk_key_encoding/: __init__.py  _spec.py  default.py  v2.py
src/pydantic_zarr/strict/v3/codec/: __init__.py  _spec.py  blosc.py  bytes.py  cast_value.py  crc32c.py  gzip.py  scale_offset.py  sharding_indexed.py  transpose.py  zstd.py
src/pydantic_zarr/v3/: __init__.py  codecs.py
src/pydantic_zarr/zarr_v2/: __init__.py  array_proxy.py  v2.py
src/pydantic_zarr/zarr_v3/: v3.py
tests/test_docs/: test_docs.py
tests/test_pydantic_zarr/: conftest.py  strict_oracle.py  test_core.py  test_strict_property.py  test_strict_v3.py  test_v2.py  test_v3.py
tests/test_pydantic_zarr/strict/: test_array_level_passes.py  test_chunk_grid.py  test_codec_blosc.py  test_codec_extra.py  test_codec_sharding.py  test_codec_simple.py  test_codec_transpose.py  test_cross_field.py  test_dispatch_maps.py  test_key_encoding.py  test_pipeline.py  test_registry.py
tests/test_pydantic_zarr/test_backends/: _test_tensorstore.py  test_tensorstore.py
tests/test_pydantic_zarr/test_experimental/: conftest.py  test_v2.py  test_v3.py
